// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/Basic.js correctly test 1`] = `
<ul
  class="jc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_open"
    />
    <span
      class="jc-tree-checkbox jc-tree-checkbox-checked"
    >
      <span
        class="jc-tree-checkbox-inner"
      />
    </span>
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="jc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="jc-tree-child-tree jc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class="jc-tree-treenode-disabled"
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          class="jc-tree-checkbox jc-tree-checkbox-checked jc-tree-checkbox-disabled"
        >
          <span
            class="jc-tree-checkbox-inner"
          />
        </span>
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="jc-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox jc-tree-checkbox-disabled"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="jc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="jc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          class="jc-tree-checkbox jc-tree-checkbox-checked"
        >
          <span
            class="jc-tree-checkbox-inner"
          />
        </span>
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="jc-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox jc-tree-checkbox-checked"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="jc-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Basic-controlled.js correctly test 1`] = `
<ul
  class="jc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_open"
    />
    <span
      class="jc-tree-checkbox jc-tree-checkbox-indeterminate"
    >
      <span
        class="jc-tree-checkbox-inner"
      />
    </span>
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="jc-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="jc-tree-child-tree jc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          class="jc-tree-checkbox jc-tree-checkbox-checked"
        >
          <span
            class="jc-tree-checkbox-inner"
          />
        </span>
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="jc-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox jc-tree-checkbox-checked"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox jc-tree-checkbox-checked"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox jc-tree-checkbox-checked"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          class="jc-tree-checkbox"
        >
          <span
            class="jc-tree-checkbox-inner"
          />
        </span>
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="jc-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="jc-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="jc-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-checkbox"
            >
              <span
                class="jc-tree-checkbox-inner"
              />
            </span>
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="jc-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher-noop"
        />
        <span
          class="jc-tree-checkbox"
        >
          <span
            class="jc-tree-checkbox-inner"
          />
        </span>
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="jc-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_close"
    />
    <span
      class="jc-tree-checkbox"
    >
      <span
        class="jc-tree-checkbox-inner"
      />
    </span>
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="jc-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher-noop"
    />
    <span
      class="jc-tree-checkbox"
    >
      <span
        class="jc-tree-checkbox-inner"
      />
    </span>
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="jc-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Customized-icon.js correctly test 1`] = `
<ul
  class="jc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_open"
    />
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="jc-tree-iconEle jc-tree-icon__customize"
      >
        <i
          class="jcicon jcicon-smile-o "
        />
      </span>
      <span
        class="jc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="jc-tree-child-tree jc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher-noop"
        />
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal jc-tree-node-selected"
          title="leaf"
        >
          <span
            class="jc-tree-iconEle jc-tree-icon__customize"
          >
            <i
              class="jcicon jcicon-meh-o "
            />
          </span>
          <span
            class="jc-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher-noop"
        />
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="jc-tree-iconEle jc-tree-icon__customize"
          >
            <i
              class="jcicon jcicon-frown-o "
            />
          </span>
          <span
            class="jc-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Draggable.js correctly test 1`] = `
<ul
  class="jc-tree draggable-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_open"
    />
    <span
      aria-grabbed="true"
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="jc-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="jc-tree-child-tree jc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          aria-grabbed="true"
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="jc-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="jc-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_close"
        />
        <span
          aria-grabbed="true"
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="jc-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="jc-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_close"
    />
    <span
      aria-grabbed="true"
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="jc-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="jc-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Dynamic.js correctly test 1`] = `
<ul
  class="jc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_close"
    />
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="jc-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_close"
    />
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="jc-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher-noop"
    />
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="jc-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Line.js correctly test 1`] = `
<ul
  class="jc-tree jc-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="jc-tree-switcher jc-tree-switcher_open"
    />
    <span
      class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="jc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="jc-tree-child-tree jc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_open"
        />
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="jc-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="jc-tree-child-tree jc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="jc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="jc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="jc-tree-switcher jc-tree-switcher-noop"
            />
            <span
              class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="jc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_close"
        />
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="jc-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="jc-tree-switcher jc-tree-switcher_close"
        />
        <span
          class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="jc-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/Search.js correctly test 1`] = `
<div>
  <span
    class="jc-input-search jc-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="jc-input"
      placeholder="Search"
      type="text"
    />
    <span
      class="jc-input-suffix"
    >
       
      <i
        class="jcicon jcicon-search  jc-input-search-icon"
      />
       
    </span>
  </span>
  <ul
    class="jc-tree"
    role="tree-node"
    unselectable="on"
  >
    <li
      class=""
    >
      <span
        class="jc-tree-switcher jc-tree-switcher_close"
      />
      <span
        class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="jc-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="jc-tree-switcher jc-tree-switcher_close"
      />
      <span
        class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="jc-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="jc-tree-switcher jc-tree-switcher-noop"
      />
      <span
        class="jc-tree-node-content-wrapper jc-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="jc-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
